Sec16_Chap154-XX: cleaned and optimized code